<resources>
    <string name="app_name">USSMS</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="login">Login</string>
    <string name="change_language">Change Language</string>
    <string name="application_setting">Application Setting</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_language">Languge</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_about">About</string>
    <string name="menu_send">Send</string>
    <string name="menu_login">Login</string>
    <string name="home_btn1">Class Room</string>
    <string name="home_btn2">University Activity</string>
    <string name="home_btn3">btn3</string>
    <string name="home_btn4">btn4</string>
    <string name="home_btn5">btn5</string>
    <string name="home_btn6">btn6</string>
    <string name="home_btn7">btn7</string>
    <string name="home_btn8">btn8</string>
    <string name="home_btn9">btn9</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>
    <string name="department">Department</string>
    <string name="level">Level</string>
    <string name="signup">Sign up</string>
    <string name="gethelp">" Get help"</string>
    <string name="Donthaveanaccount">"Don't have an account ? "</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="alreadyhaveanaccount">"Already have an account ? "</string>
    <string name="her">her</string>
    <string name="termsandconditions">Terms and Conditions</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="title_activity_m3">M3Activity</string>
    <string name="all_set">Register successfuly please visit your email for confirm account.</string>
    <string name="okay">Okay</string>
    <string name="not_acctive">You need to confirm your account please visit your email for confirm account</string>
    <string name="ResendEmail">Resend Email</string>
    <string name="todo">TODO</string>
    <string name="default_notification_channel_id">abcd</string>
    <string name="fcm_message">hhhh</string>
    <string name="title_a_news">News</string>
    <string name="sample_image_name">Image Name</string>
    <string name="Descreption">Descreption</string>

    <string-array name="departments_array">
        <item>Computer</item>
        <item>Engineering</item>
        <item>Law</item>
        <item>Physic</item>
        <item>English</item>
        <item>Arabic</item>
        <item>Geographic</item>
        <item>Islamic</item>
        <item>History</item>
        <item>Social</item>
    </string-array>
</resources>
