<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_ch"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_language" />
        <item
            android:id="@+id/nav_reset"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_reset" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_filter_vintage_black_24dp"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>