<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_n"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login_n"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_ch_n"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_language" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share_n"
                android:icon="@drawable/ic_filter_vintage_black_24dp"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_send_n"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>