<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dig"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Register TextView-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btnClose_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/ic_close_black_24dp"
                android:background="#00000000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textColor="#000000"
                android:text="@string/register"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>
        <!--EditText-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hoUsername_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            app:endIconDrawable="@drawable/application_setting_ic"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUsername_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hoFullname_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edFullname_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hoEmail_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:suffixText="\@uoh.edu.iq">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hoPassword_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Button Student & Teacher-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/tgWho_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedButton="@id/STN_1"
                app:selectionRequired="true"
                android:orientation="horizontal"
                app:singleSelection="true">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/STN_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/student"
                    android:textColor="#000"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    app:icon="@drawable/application_setting_ic" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/TCHN_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/teacher"
                    android:textColor="#000"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    app:icon="@drawable/application_setting_ic" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
        <!--Spinners-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">
            <com.tiper.MaterialSpinner
                android:id="@+id/spLevel_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/level"
                android:paddingRight="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/background"
                app:spinnerMode="dropdown">
            </com.tiper.MaterialSpinner>
            <com.tiper.MaterialSpinner
                android:id="@+id/spDepartment_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/department"
                android:paddingLeft="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/background"
                app:spinnerMode="dropdown">
            </com.tiper.MaterialSpinner>

        </LinearLayout>
        <!--Terms and Cond..-->
        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/termsandconditions"/>
            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="-15dp"
                android:textColor="#2196F3"
                android:textAllCaps="false"
                android:text="@string/her"
                android:onClick="her"/>
        </LinearLayout>
        <!--Button Register-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRegister_register"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#fff"
                android:textSize="25dp"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/register"/>
            <com.wang.avi.AVLoadingIndicatorView
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/avi_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AVLoadingIndicatorView"
                android:visibility="invisible"
                app:indicatorName="BallPulseIndicator"
                app:indicatorColor="#000000" />

        </RelativeLayout>
        <!--Bottom Container-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="bottom"
            android:background="@drawable/buttom_dig_shape"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alreadyhaveanaccount"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#E91E63"
                    android:onClick="toLogin"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>