<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:background="@drawable/bg_dig">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Login TextView-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btnClose_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/ic_close_black_24dp"
                android:background="#00000000"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textColor="#000000"
                android:text="@string/login"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>
        <!--EditText-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hoEmail_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            app:suffixText="\@uoh.edu.iq"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hoPassword_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Forget Password-->
        <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/forgetpassword"/>
        <TextView
            android:id="@+id/getHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#2196F3"
            android:text="@string/gethelp"
            />
    </LinearLayout>
        <!--Login Button-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnLogin_login"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#fff"
                android:textSize="25dp"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/login"/>
            <com.wang.avi.AVLoadingIndicatorView
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/avi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AVLoadingIndicatorView"
                android:visibility="invisible"
                app:indicatorName="BallPulseIndicator"
                app:indicatorColor="#000000" />

        </RelativeLayout>

        <!--Bottom Container-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttom_dig_shape"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Donthaveanaccount"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="#E91E63"
                android:onClick="toSignUp"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>